--- a/mo-instagram/Base.lproj/LaunchScreen.storyboard
+++ b/mo-instagram/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="Icon-60" translatesAutoresizingMaskIntoConstraints="NO" id="6E7-RS-QwY">
-                                <rect key="frame" x="134" y="364" width="147" height="169"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Icon-60" translatesAutoresizingMaskIntoConstraints="NO" id="6E7-RS-QwY">
+                                <rect key="frame" x="133.5" y="363.5" width="147" height="169"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="147" id="9XM-hA-Mvr"/>
+                                    <constraint firstAttribute="height" constant="169" id="Szb-Pj-yzw"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6E7-RS-QwY" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="QWd-gB-maN"/>
+                            <constraint firstItem="6E7-RS-QwY" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ROu-OB-8EG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
